# clecs

./: CMakeLists.txt  README  README.md
cmake/: codegen.cmake
codegen/: CMakeLists.txt
codegen/componentc/: CMakeLists.txt  main.cpp
codegen/systemc/: CMakeLists.txt  main.cpp
demo/: CMakeLists.txt
demo/core/: CMakeLists.txt  main.cpp
demo/ecs/: CMakeLists.txt  main.cpp
demo/ecs/component/: position.json  velocity.json
demo/ecs/system/: speed.cl
demo/sharing/: directx11.cpp
include/compute/: compute.hpp
include/compute/core/: buffer.hpp  buffer.inl  context.hpp  device.hpp  kernel.hpp  kernel.inl  opencl.hpp
include/compute/ecs/: entity.hpp  registry.hpp  registry.inl
include/compute/sharing/: interop.hpp  shared_buffer.hpp
source/core/: context.cpp  device.cpp  kernel.cpp
source/ecs/: registry.cpp
source/sharing/: interop.cpp
